Commiting the checkout addon